# simulated-annealing

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
libs/nQueens/task/: NQueensTask.cpp  NQueensTask.h
libs/simulatedAnnealing/solver/: Solver.cpp  Solver.h
libs/simulatedAnnealing/state/: State.cpp  State.h
libs/simulatedAnnealing/task/: Task.h
